@@ -29,6 +29,7 @@
       - [ ] v3: sigsegv trap handling
 - [ ] Should find or create a suitable property editor 
 **** TODO Continue Logger in src/logger
+     CLOCK: [2012-01-13 ven. 12:08]--[2012-01-13 ven. 12:19] =>  0:11
      CLOCK: [2012-01-11 mer. 13:41]--[2012-01-11 mer. 14:11] =>  0:30
      CLOCK: [2012-01-07 sam. 18:52]--[2012-01-07 sam. 19:04] =>  0:12
      CLOCK: [2012-01-07 sam. 18:28]--[2012-01-07 sam. 18:44] =>  0:16
@@ -83,6 +84,7 @@
 	    - [X] Initialize it in Logger::init
 	    - [X] LoggerOutputs output modifed
 	    - [X] log_reader tool print it in infos panel
+            - [X] Set it to the binary compil date and time
       - [ ] Execution date/time
       - [ ] And all three output should use it
 - [ ] Should remove autoproject generated files
