@@ -17,4 +17,5 @@ logger - GPLv3 - The RainbruRPG's stream-oriented multi-output logging
    Please update version and revision in configure.in
 
 * v0.0.0-6 (07 jan 2012 - ???) SLOC ??? FT ??:??
+- Makes the Logger::init function set the binary compil time
 - Added compil adte ad time to log header
