@@ -57,8 +57,8 @@
                         '_m4_warn' => 1,
                         'AC_LIBTOOL_OBJDIR' => 1,
                         'gl_FUNC_ARGZ' => 1,
-                        'LTOBSOLETE_VERSION' => 1,
                         'AM_SANITY_CHECK' => 1,
+                        'LTOBSOLETE_VERSION' => 1,
                         'AC_LIBTOOL_LANG_GCJ_CONFIG' => 1,
                         'AC_LIBTOOL_PROG_COMPILER_PIC' => 1,
                         'LT_LIB_M' => 1,
@@ -73,16 +73,16 @@
                         'LT_FUNC_DLSYM_USCORE' => 1,
                         '_LT_AC_LANG_F77' => 1,
                         'AC_LIBTOOL_CONFIG' => 1,
-                        '_AM_SUBST_NOTMAKE' => 1,
                         'AC_LTDL_DLLIB' => 1,
+                        '_AM_SUBST_NOTMAKE' => 1,
                         '_AM_AUTOCONF_VERSION' => 1,
                         'AM_DISABLE_SHARED' => 1,
                         '_LTDL_SETUP' => 1,
-                        '_LT_AC_LANG_CXX' => 1,
                         'AM_PROG_LIBTOOL' => 1,
-                        'AC_LIB_LTDL' => 1,
-                        '_LT_AC_FILE_LTDLL_C' => 1,
+                        '_LT_AC_LANG_CXX' => 1,
                         'AM_PROG_LD' => 1,
+                        '_LT_AC_FILE_LTDLL_C' => 1,
+                        'AC_LIB_LTDL' => 1,
                         'AU_DEFUN' => 1,
                         'AC_PROG_NM' => 1,
                         'AC_LIBTOOL_DLOPEN' => 1,
@@ -106,31 +106,31 @@
                         'AC_LTDL_OBJDIR' => 1,
                         '_LT_PATH_TOOL_PREFIX' => 1,
                         'AC_LIBTOOL_RC' => 1,
-                        'AM_SILENT_RULES' => 1,
-                        'AC_DISABLE_FAST_INSTALL' => 1,
                         '_LT_AC_PROG_ECHO_BACKSLASH' => 1,
-                        '_LT_AC_SYS_LIBPATH_AIX' => 1,
-                        '_LT_AC_TRY_DLOPEN_SELF' => 1,
+                        'AC_DISABLE_FAST_INSTALL' => 1,
+                        'AM_SILENT_RULES' => 1,
                         'include' => 1,
-                        'LT_AC_PROG_SED' => 1,
+                        '_LT_AC_TRY_DLOPEN_SELF' => 1,
+                        '_LT_AC_SYS_LIBPATH_AIX' => 1,
                         'RB_CHECK_RBUIC' => 1,
+                        'LT_AC_PROG_SED' => 1,
                         'AM_ENABLE_SHARED' => 1,
                         'LTDL_INSTALLABLE' => 1,
                         '_LT_AC_LANG_GCJ_CONFIG' => 1,
                         'AC_ENABLE_SHARED' => 1,
-                        'AC_ENABLE_STATIC' => 1,
                         'AC_LIBTOOL_SYS_HARD_LINK_LOCKS' => 1,
+                        'AC_ENABLE_STATIC' => 1,
                         '_LT_AC_TAGVAR' => 1,
                         'AC_LIBTOOL_LANG_F77_CONFIG' => 1,
                         'AM_CONDITIONAL' => 1,
                         'LT_LIB_DLLOAD' => 1,
-                        'LTDL_INIT' => 1,
                         'LTVERSION_VERSION' => 1,
-                        'AM_PROG_INSTALL_SH' => 1,
+                        'LTDL_INIT' => 1,
                         'm4_include' => 1,
+                        'AM_PROG_INSTALL_SH' => 1,
                         'AC_PROG_EGREP' => 1,
-                        '_AC_AM_CONFIG_HEADER_HOOK' => 1,
                         'AC_PATH_MAGIC' => 1,
+                        '_AC_AM_CONFIG_HEADER_HOOK' => 1,
                         'AC_LTDL_SYSSEARCHPATH' => 1,
                         'AM_MAKE_INCLUDE' => 1,
                         'LT_CMD_MAX_LEN' => 1,
@@ -176,11 +176,11 @@
                         'AM_PROG_NM' => 1,
                         'AC_LIBLTDL_CONVENIENCE' => 1,
                         'AC_DEPLIBS_CHECK_METHOD' => 1,
-                        'AM_SET_CURRENT_AUTOMAKE_VERSION' => 1,
                         'AC_LIBLTDL_INSTALLABLE' => 1,
+                        'AM_SET_CURRENT_AUTOMAKE_VERSION' => 1,
                         'AC_LTDL_ENABLE_INSTALL' => 1,
-                        'AC_LIBTOOL_SYS_DYNAMIC_LINKER' => 1,
                         'LT_PROG_GCJ' => 1,
+                        'AC_LIBTOOL_SYS_DYNAMIC_LINKER' => 1,
                         'AM_INIT_AUTOMAKE' => 1,
                         'AC_DISABLE_STATIC' => 1,
                         'LT_PATH_NM' => 1,
@@ -188,25 +188,25 @@
                         '_LT_AC_LOCK' => 1,
                         '_LT_AC_LANG_RC_CONFIG' => 1,
                         'LT_SYS_MODULE_PATH' => 1,
-                        'AC_LIBTOOL_POSTDEP_PREDEP' => 1,
                         'LT_WITH_LTDL' => 1,
+                        'AC_LIBTOOL_POSTDEP_PREDEP' => 1,
                         'AC_LTDL_SHLIBPATH' => 1,
                         'AM_AUX_DIR_EXPAND' => 1,
-                        '_LT_AC_LANG_F77_CONFIG' => 1,
                         'AC_LIBTOOL_PROG_COMPILER_NO_RTTI' => 1,
-                        '_AM_SET_OPTIONS' => 1,
+                        '_LT_AC_LANG_F77_CONFIG' => 1,
                         '_LT_COMPILER_OPTION' => 1,
-                        '_AM_OUTPUT_DEPENDENCY_COMMANDS' => 1,
+                        '_AM_SET_OPTIONS' => 1,
                         'AM_RUN_LOG' => 1,
-                        'AC_LIBTOOL_SYS_OLD_ARCHIVE' => 1,
-                        'AC_LTDL_SYS_DLOPEN_DEPLIBS' => 1,
+                        '_AM_OUTPUT_DEPENDENCY_COMMANDS' => 1,
                         'AC_LIBTOOL_PICMODE' => 1,
-                        'LT_PATH_LD' => 1,
+                        'AC_LTDL_SYS_DLOPEN_DEPLIBS' => 1,
+                        'AC_LIBTOOL_SYS_OLD_ARCHIVE' => 1,
                         'AC_CHECK_LIBM' => 1,
+                        'LT_PATH_LD' => 1,
                         'AC_LIBTOOL_SYS_LIB_STRIP' => 1,
                         '_AM_MANGLE_OPTION' => 1,
-                        'AC_LTDL_SYMBOL_USCORE' => 1,
                         'AC_LIBTOOL_SYS_MAX_CMD_LEN' => 1,
+                        'AC_LTDL_SYMBOL_USCORE' => 1,
                         'AM_SET_DEPDIR' => 1,
                         '_LT_CC_BASENAME' => 1,
                         '_LT_LIBOBJ' => 1
@@ -224,25 +224,25 @@
                         'configure.in'
                       ],
                       {
-                        '_LT_AC_TAGCONFIG' => 1,
                         'AM_PROG_F77_C_O' => 1,
-                        'm4_pattern_forbid' => 1,
+                        '_LT_AC_TAGCONFIG' => 1,
                         'AC_INIT' => 1,
-                        '_AM_COND_IF' => 1,
+                        'm4_pattern_forbid' => 1,
                         'AC_CANONICAL_TARGET' => 1,
-                        'AC_SUBST' => 1,
+                        '_AM_COND_IF' => 1,
                         'AC_CONFIG_LIBOBJ_DIR' => 1,
-                        'AC_FC_SRCEXT' => 1,
+                        'AC_SUBST' => 1,
                         'AC_CANONICAL_HOST' => 1,
+                        'AC_FC_SRCEXT' => 1,
                         'AC_PROG_LIBTOOL' => 1,
                         'AM_INIT_AUTOMAKE' => 1,
                         'AC_CONFIG_SUBDIRS' => 1,
                         'AM_AUTOMAKE_VERSION' => 1,
                         'LT_CONFIG_LTDL_DIR' => 1,
-                        'AC_REQUIRE_AUX_FILE' => 1,
                         'AC_CONFIG_LINKS' => 1,
-                        'm4_sinclude' => 1,
+                        'AC_REQUIRE_AUX_FILE' => 1,
                         'LT_SUPPORTED_TAG' => 1,
+                        'm4_sinclude' => 1,
                         'AM_MAINTAINER_MODE' => 1,
                         'AM_GNU_GETTEXT_INTL_SUBDIR' => 1,
                         '_m4_warn' => 1,
@@ -255,17 +255,17 @@
                         'include' => 1,
                         'AM_GNU_GETTEXT' => 1,
                         'AC_LIBSOURCE' => 1,
-                        'AM_PROG_FC_C_O' => 1,
                         'AC_CANONICAL_BUILD' => 1,
+                        'AM_PROG_FC_C_O' => 1,
                         'AC_FC_FREEFORM' => 1,
                         'AH_OUTPUT' => 1,
-                        '_AM_SUBST_NOTMAKE' => 1,
                         'AC_CONFIG_AUX_DIR' => 1,
-                        'sinclude' => 1,
-                        'm4_pattern_allow' => 1,
+                        '_AM_SUBST_NOTMAKE' => 1,
                         'AM_PROG_CC_C_O' => 1,
-                        'AC_CANONICAL_SYSTEM' => 1,
+                        'm4_pattern_allow' => 1,
+                        'sinclude' => 1,
                         'AM_CONDITIONAL' => 1,
+                        'AC_CANONICAL_SYSTEM' => 1,
                         'AC_CONFIG_HEADERS' => 1,
                         'AC_DEFINE_TRACE_LITERAL' => 1,
                         'm4_include' => 1,
